# cyberCafe

./: .gitignore  BUILD.md  Cargo.toml  README.md  design.md  ecosystem.config.js  package-lock.json  package.json  plan.md  ratan-startup.vbs  setup-autostart.ps1
.github/workflows/: release.yml
MODNet/pretrained/: README.md
backend/: .env.example  package-lock.json  package.json
backend/src/: server.js
backend/src/db/: activity.js  index.js  jobs.js
backend/src/lib/: config.js  win-exec.js
backend/src/routes/: jobs.js  passport.js  system.js
backend/src/services/cleanup/: index.js
backend/src/services/diagnostics/: index.js
backend/src/services/media/: index.js
backend/src/services/passport/: index.js
backend/src/services/print/: index.js
backend/src/services/processing/: index.js
backend/src/services/whatsapp/: index.js
crates/ratan-core/: Cargo.toml
crates/ratan-core/src/: cleanup.rs  config.rs  diagnostics.rs  error.rs  imaging.rs  lib.rs  main.rs  media.rs  paper.rs  passport.rs  pdf.rs  print.rs  proc.rs  processing.rs  state.rs  whatsapp.rs
crates/ratan-core/src/db/: activity.rs  jobs.rs  mod.rs
crates/ratan-core/src/routes/: jobs.rs  mod.rs  passport.rs  system.rs
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.jsx  page.jsx
frontend/src/app/diagnostics/: page.jsx
frontend/src/app/failed/: page.jsx
frontend/src/app/passport/: page.jsx
frontend/src/app/printed/: page.jsx
frontend/src/app/processed/: page.jsx
frontend/src/app/queue/: page.jsx
frontend/src/app/whatsapp/: page.jsx
frontend/src/components/: ActivitySidebar.jsx  Avatar.jsx  BatchCard.jsx  BatchProcessModal.jsx  CheckUpdatesButton.jsx  CollageModal.jsx  ControlPanel.jsx  CreateBatchModal.jsx  JobsView.jsx  NetworkStatus.jsx  PassportSourceModal.jsx  ProcessModal.jsx  QuickPreview.jsx  SectionHeader.jsx  Spinner.jsx  StatusTimeline.jsx  Tags.jsx  TaskCard.jsx  TopNav.jsx  UpdateContext.jsx  UpdateNotifier.jsx  UploadDialog.jsx  WhatsAppQR.jsx
frontend/src/lib/: api.js  format.js
models/: README.md
src-tauri/: Cargo.toml  tauri.conf.json  windows-hooks.nsh
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
whatsapp-sidecar/: package-lock.json  package.json  server.js
