# Cargo workspace for the Rust rewrite of the Ratan backend.
#
# `crates/ratan-core` is the backend library + a standalone `ratan-server` bin
# (for dev/testing against the existing Next.js frontend). `src-tauri` (added in
# Phase 4) wraps the same library into the desktop app, so it is listed here once
# it exists.
[workspace]
resolver = "2"
members = ["crates/ratan-core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ratan"]

[profile.release]
# Smaller, faster binaries for the shipped installer.
opt-level = "s"
lto = true
codegen-units = 1
strip = true
# NOTE: we deliberately do NOT set `panic = "abort"`. With abort, a Rust panic is
# emitted as a `ud2` instruction, which surfaces as STATUS_ILLEGAL_INSTRUCTION
# (0xc000001d) in the Windows event log — indistinguishable from a real
# missing-CPU-instruction fault, and impossible to diagnose. Unwinding lets the
# panic hook (see src-tauri/src/main.rs) write a readable message to a log file.
