[package]
name = "ratan-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Ratan desktop app (Tauri shell around the Rust backend)"
default-run = "ratan-app"

[[bin]]
name = "ratan-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
ratan-core = { path = "../crates/ratan-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
